[project]
name = "commodity-channel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fonttools==4.58.5",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "neo4j==5.28.1",
    "numpy==2.3.1",
    "openai==1.93.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]
